Bug 268364 - strange message "New Message Publish"
Summary: strange message "New Message Publish"
Status: RESOLVED FIXED
Alias: None
Product: kdepimlibs
Classification: Applications
Component: kcal (other bugs)
Version First Reported In: GIT (master)
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-13 13:44 UTC by Alexander Potashev
Modified: 2013-07-10 21:10 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2011-03-13 13:44:22 UTC
Version:           GIT (master)
OS:                Linux

Please, change "New Message Publish" to "New Message Published" or "Publishing New Message...".

I don't understand what "New Message Publish" means.

Reproducible: Always
Comment 1 Alexander Potashev 2011-03-13 13:46:04 UTC
Or may be it should be "Publish New Message", if it's a description of an action.
Comment 2 Laurent Montel 2011-09-06 14:04:08 UTC
Where do you see this string ?
Comment 3 Christophe Marin 2011-09-06 14:20:51 UTC
./kcal/scheduler.cpp:89:    return i18nc( "@item new message posting", "New Message Publish" );
./kcalutils/stringify.cpp:344:    return i18nc( "@item new message posting", "New Message Publish" );
Comment 4 Laurent Montel 2011-09-06 15:01:09 UTC
Ok thanks
Comment 5 Laurent Montel 2011-09-07 13:25:18 UTC
Git commit 1ab638e71a6b9feef2dbe3532ce23a736acf2d3b by Montel Laurent.
Committed on 07/09/2011 at 15:24.
Pushed by mlaurent into branch 'master'.

Fix Bug 268364 - strange message "New Message Publish"

FIXED-IN: 4.8
BUG: 268364

M  +1    -1    kcal/scheduler.cpp
M  +1    -1    kcalutils/stringify.cpp

http://commits.kde.org/kdepimlibs/1ab638e71a6b9feef2dbe3532ce23a736acf2d3b
Comment 6 Nick Shaforostoff 2011-12-03 10:41:40 UTC
i still don't get it. can somebody show the screenshot with this text?

it's not possible to understand the context from the msgctxt
Comment 7 Allen Winter 2011-12-05 18:32:58 UTC
this string is currently only used in debug print statements so there is no screenshot to show.

I will attempt to give you a more descriptive context -- maybe that will help you.
Comment 8 Allen Winter 2011-12-05 18:51:30 UTC
Git commit 53b286a1ee40ccc96fea206a993b7a93a56ec835 by Allen Winter.
Committed on 05/12/2011 at 19:50.
Pushed by winterz into branch 'master'.

in scheduleMessageStatus(), improve the i18n strings and context
to help out the translators.

BUG: 268364
FIXED-IN: 4.8
MERGE: no

M  +8    -4    kcal/scheduler.cpp
M  +8    -4    kcalutils/stringify.cpp

http://commits.kde.org/kdepimlibs/53b286a1ee40ccc96fea206a993b7a93a56ec835
Comment 9 Alexander Potashev 2011-12-06 17:53:20 UTC
Please, just change "@item" to "@info:status" where applicable.

What is a "scheduling message"? Who or what makes "requests" that are mentioned in the i18n strings "New Scheduling Message Request" and "Updated Scheduling Message Request"?
Comment 10 Nick Shaforostoff 2011-12-06 18:01:34 UTC
and, if these strings dont appear to the user, why should they be translated?
Comment 11 Allen Winter 2011-12-07 22:27:24 UTC
would it help if we replace "scheduling message" with "invitation"?

we don't have to translate these strings at this time since they don't seem to be user-visible.  but, the minute we do that someone will use them in a user-visible way.  so this is mainly future-proofing.
Comment 12 Sergio Martins 2013-07-10 21:10:39 UTC
Looks like everyone is happy.