Fix Bug 268364 - strange message "New Message Publish"

FIXED-IN: 4.8
BUG: 268364